--- a/assets/css/ohmyfood.css
+++ b/assets/css/ohmyfood.css
@@ -175,7 +175,6 @@ video {
   max-width: 100%;
   height: auto;
   font-style: italic;
-  shape-margin: var(--space-200);
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -199,8 +198,8 @@ textarea:not([rows]) {
 
 [class^=bg-],
 [class*=" bg-"] {
-  background-color: var(--_clr-bg, red);
-  color: var(--_clr-txt, red);
+  background-color: var(--_clr-bg, #fff);
+  color: var(--_clr-txt, #000);
   background-image: var(--_gradient);
 }
 
@@ -417,32 +416,21 @@ svg > path {
   z-index: -1;
 }
 
-.card {
-  box-shadow: 0 var(--space-100) var(--space-200) 0 var(--clr-neutral-700);
-  padding: var(--space-400);
-  transition: 0.3s;
-}
-
-/* On hover, add a deeper shadow */
-.card:hover {
-  box-shadow: 0 var(--space-200) var(--space-300) 0 var(--clr-neutral-700);
-}
-
 .shadow-300 {
-  box-shadow: 0px var(--space-100) var(--space-200) 0px color-mix(in srgb, var(--clr-neutral-900), transparent 75%);
+  box-shadow: 0px var(--space-100) var(--space-200) 0px rgba(0, 0, 0, 0.25);
 }
 
 .shadow-300:hover {
-  box-shadow: 0px var(--space-200) var(--space-300) 0px color-mix(in srgb, var(--clr-neutral-900), transparent 65%);
+  box-shadow: 0px var(--space-200) var(--space-300) 0px rgba(0, 0, 0, 0.325);
 }
 
 .shadow-400 {
-  box-shadow: 0px var(--space-100) var(--space-300) 0px color-mix(in srgb, var(--clr-neutral-900), transparent 85%);
+  box-shadow: 0px var(--space-100) var(--space-300) 0px rgba(0, 0, 0, 0.15);
 }
 
 .shadow-500 {
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px var(--space-100) var(--space-300) 0px color-mix(in srgb, var(--clr-neutral-900), transparent 90%);
+  box-shadow: 0px var(--space-100) var(--space-300) 0px rgba(0, 0, 0, 0.1);
 }
 
 .rounded-border-300 {
