--- a/SASS/2_utility/_wrappings.scss
+++ b/SASS/2_utility/_wrappings.scss
@@ -1,36 +1,25 @@
-.card {
-  box-shadow: 0 var(--space-100) var(--space-200) 0 var(--clr-neutral-700);
-  padding: var(--space-400);
-  transition: 0.3s;
-}
-
-/* On hover, add a deeper shadow */
-.card:hover {
-  box-shadow: 0 var(--space-200) var(--space-300) 0 var(--clr-neutral-700);
-}
-
 .shadow-300 {
   // shadow on main action button
   box-shadow: 0px var(--space-100) var(--space-200) 0px
-    color-mix(in srgb, var(--clr-neutral-900), transparent 75%);
+  rgba(0, 0, 0, 0.25);
 }
 
 .shadow-300:hover {
   box-shadow: 0px var(--space-200) var(--space-300) 0px
-    color-mix(in srgb, var(--clr-neutral-900), transparent 65%);
+  rgba(0, 0, 0, 0.325);
 }
 
 .shadow-400 {
   // shadow on concept
   box-shadow: 0px var(--space-100) var(--space-300) 0px
-    color-mix(in srgb, var(--clr-neutral-900), transparent 85%);
+  rgba(0, 0, 0, 0.15);
 }
 
 .shadow-500 {
   // shadow on menu-item
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
   box-shadow: 0px var(--space-100) var(--space-300) 0px
-    color-mix(in srgb, var(--clr-neutral-900), transparent 90%);
+  rgba(0, 0, 0, 0.1);
 }
 
 .rounded-border-300 {
