--- a/SASS/3_block/ohmyfood/_header.scss
+++ b/SASS/3_block/ohmyfood/_header.scss
@@ -31,9 +31,9 @@
 
   // box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 0px var(--space-100) var(--space-100) 0px
-      color-mix(in srgb, var(--clr-neutral-900), transparent 75%),
+  rgba(0, 0, 0, 0.25),
     inset 0px calc(var(--space-100) / 2) var(--space-100) 0px
-      color-mix(in srgb, var(--clr-neutral-900), transparent 85%);
+    rgba(0, 0, 0, 0.15);
 
   & p::before {
     margin-inline-end: var(--space-400);
