--- a/assets/css/ohmyfood.css
+++ b/assets/css/ohmyfood.css
@@ -538,7 +538,7 @@ input[type=checkbox]:checked + .icon-checkbox-heart::before {
   padding-block: var(--space-200-300);
   margin-block-end: calc(var(--space-100) * 0.75);
   font-size: var(--fs-300);
-  box-shadow: 0px var(--space-100) var(--space-100) 0px color-mix(in srgb, var(--clr-neutral-900), transparent 75%), inset 0px calc(var(--space-100) / 2) var(--space-100) 0px color-mix(in srgb, var(--clr-neutral-900), transparent 85%);
+  box-shadow: 0px var(--space-100) var(--space-100) 0px rgba(0, 0, 0, 0.25), inset 0px calc(var(--space-100) / 2) var(--space-100) 0px rgba(0, 0, 0, 0.15);
 }
 .location p::before {
   margin-inline-end: var(--space-400);
